--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-animated-weather": "^4.0.1",
+    "react-clock": "^5.0.0",
+    "react-dom": "^18.3.1",
+    "react-live-clock": "^6.1.23-beta"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
