--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "framer-motion": "^12.0.0-alpha.0",
     "react": "^18.3.1",
     "react-animated-weather": "^4.0.1",
     "react-clock": "^5.0.0",
